Integrate yt-dlp into Docker environment and implement service wrapper
- Added Makefile for running unit and feature tests
- Implemented YtDlpService for interacting with yt-dlp
- Updated Dockerfile to install yt-dlp and its dependencies
- Created integration and unit tests for YtDlpService
- Updated sprint status and marked Story 1.3 as done

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -6,11 +6,16 @@ RUN apt-get update \
         unzip \
         libpq-dev \
         libicu-dev \
+        ffmpeg \
         python3 \
         python3-pip \
+        curl \
+        ca-certificates \
     && docker-php-ext-install pdo_pgsql pgsql bcmath intl pcntl \
     && pecl install redis \
     && docker-php-ext-enable redis \
+    && curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp \
+    && chmod a+rx /usr/local/bin/yt-dlp \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
