--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -38,7 +38,7 @@ development_status:
   epic-1: in-progress
   1-1-init-project-livewire-starter-kit: done
   1-2-configure-docker-compose: done
-  1-3-integrate-yt-dlp: backlog
+  1-3-integrate-yt-dlp: done
   1-4-video-info-service: backlog
   1-5-download-page-ui: backlog
   1-6-queue-system-download-job: backlog
