--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -1,33 +1,3 @@
-# generated: 2026-01-13
-# project: laravel-yt-dlp
-# project_key: laravel-yt-dlp
-# tracking_system: file-system
-# story_location: _bmad-output/implementation-artifacts
-
-# STATUS DEFINITIONS:
-# ==================
-# Epic Status:
-#   - backlog: Epic not yet started
-#   - in-progress: Epic actively being worked on
-#   - done: All stories in epic completed
-#
-# Story Status:
-#   - backlog: Story only exists in epic file
-#   - ready-for-dev: Story file created, ready for development
-#   - in-progress: Developer actively working on implementation
-#   - review: Implementation complete, ready for review
-#   - done: Story completed
-#
-# Retrospective Status:
-#   - optional: Can be completed but not required
-#   - done: Retrospective has been completed
-#
-# WORKFLOW NOTES:
-# ===============
-# - Mark epic as 'in-progress' when starting work on its first story
-# - SM typically creates next story ONLY after previous one is 'done' to incorporate learnings
-# - Dev moves story to 'review', then Dev runs code-review (fresh context, ideally different LLM)
-
 generated: 2026-01-13
 project: laravel-yt-dlp
 project_key: laravel-yt-dlp
@@ -39,7 +9,7 @@ development_status:
   1-1-init-project-livewire-starter-kit: done
   1-2-configure-docker-compose: done
   1-3-integrate-yt-dlp: done
-  1-4-video-info-service: backlog
+  1-4-video-info-service: done
   1-5-download-page-ui: backlog
   1-6-queue-system-download-job: backlog
   1-7-reverb-real-time-progress: backlog
