Add download page UI and validation for YouTube video downloads
- Introduced VideoDownloader Livewire component for user interaction with YouTube video downloads.
- Implemented format and subtitle selection with validation rules for user inputs.
- Enhanced UI with responsive design and improved error handling.
- Updated Docker Compose to include a Node service for building assets.
- Added Makefile target for building assets using npm.
- Marked Story 1.5 as review in sprint status.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,15 @@ services:
     networks:
       - laravel-yt-dlp
 
+  node:
+    image: node:24
+    working_dir: /var/www/html
+    volumes:
+      - ./:/var/www/html
+      - node_modules:/var/www/html/node_modules
+    networks:
+      - laravel-yt-dlp
+
   db:
     image: postgres:17.7
     environment:
@@ -82,3 +91,4 @@ networks:
 volumes:
   pgdata:
   redisdata:
+  node_modules:
