--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -10,7 +10,7 @@ development_status:
   1-2-configure-docker-compose: done
   1-3-integrate-yt-dlp: done
   1-4-video-info-service: done
-  1-5-download-page-ui: backlog
+  1-5-download-page-ui: review
   1-6-queue-system-download-job: backlog
   1-7-reverb-real-time-progress: backlog
   1-8-file-streaming-delivery: backlog
