Implement queue-based video download system with concurrency control
- Added DownloadTask model and migration for managing download tasks.
- Created CreateDownload action to handle download requests and enforce concurrency limits.
- Developed DownloadJob for processing downloads asynchronously, including event broadcasting for progress updates, completion, and failure.
- Integrated YtDlpService for video downloading with support for format selection and subtitles.
- Enhanced VideoDownloader Livewire component to initiate downloads and display task status.
- Updated Makefile to include new targets for migrations and frontend builds.
- Marked Story 1.6 as review in sprint status.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -11,7 +11,7 @@ development_status:
   1-3-integrate-yt-dlp: done
   1-4-video-info-service: done
   1-5-download-page-ui: done
-  1-6-queue-system-download-job: backlog
+  1-6-queue-system-download-job: review
   1-7-reverb-real-time-progress: backlog
   1-8-file-streaming-delivery: backlog
   1-9-concurrency-control: backlog
