--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -12,7 +12,7 @@ development_status:
   1-4-video-info-service: done
   1-5-download-page-ui: done
   1-6-queue-system-download-job: done
-  1-7-reverb-real-time-progress: review
+  1-7-reverb-real-time-progress: done
   1-8-file-streaming-delivery: backlog
   1-9-concurrency-control: backlog
   1-10-basic-admin-access: backlog
