fix: Update Nginx image to alpine and add a 10-second startup delay in init-letsencrypt.sh.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,7 +16,7 @@ services:
       APP_DEBUG: false
 
   web:
-    image: nginx:1.28.1
+    image: nginx:alpine
     restart: always
     ports:
       - "80:80"
