feat: improve Let's Encrypt initialization by documenting Nginx validation path and extending Nginx startup wait.

--- a/docker/nginx/default.prod.conf
+++ b/docker/nginx/default.prod.conf
@@ -3,6 +3,7 @@ server {
     server_name ytd.jyu1999.com;
     server_tokens off;
 
+    # Allow Let's Encrypt validation on port 80 without redirecting to HTTPS
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
