--- a/docker/nginx/default.prod.conf
+++ b/docker/nginx/default.prod.conf
@@ -43,7 +43,9 @@ server {
     }
 
     location /app {
-        proxy_pass http://reverb:6001;
+        resolver 127.0.0.11 valid=30s; 
+        set $reverb_service http://reverb:6001;
+        proxy_pass $reverb_service;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header Upgrade $http_upgrade;
@@ -54,7 +56,9 @@ server {
     }
 
     location /apps {
-        proxy_pass http://reverb:6001;
+        resolver 127.0.0.11 valid=30s; 
+        set $reverb_service http://reverb:6001;
+        proxy_pass $reverb_service;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header Upgrade $http_upgrade;
