feat: configure Redis to require a password in the production Docker Compose setup.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -69,6 +69,7 @@ services:
       - redisdata:/data
     networks:
       - laravel-yt-dlp
+    command: redis-server --requirepass "${REDIS_PASSWORD}"
 
   reverb:
     build:
