--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,15 +2,15 @@ FROM php:8.4-fpm
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-        git \
-        unzip \
-        libpq-dev \
-        libicu-dev \
-        ffmpeg \
-        python3 \
-        python3-pip \
-        curl \
-        ca-certificates \
+    git \
+    unzip \
+    libpq-dev \
+    libicu-dev \
+    ffmpeg \
+    python3 \
+    python3-pip \
+    curl \
+    ca-certificates \
     && docker-php-ext-install pdo_pgsql pgsql bcmath intl pcntl \
     && pecl install redis \
     && docker-php-ext-enable redis \
@@ -22,3 +22,5 @@ RUN apt-get update \
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www/html
+
+RUN chown -R www-data:www-data /var/www/html
