--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,6 +11,7 @@ services:
       - redis
     networks:
       - laravel-yt-dlp
+    env_file: .env
     environment:
       APP_ENV: production
       APP_DEBUG: false
